# globalwarmingpotentials

./: .gitattributes  .gitignore  .npmignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  datapackage.json  globalwarmingpotentials.csv  index.d.ts  index.js  index.ts  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py  tsconfig.json
.github/workflows/: main.yml
scripts/: create_tag.sh  generate_modules.py  requirements.txt  validate.py
src/: .gitattributes  MANIFEST.in  setup.cfg  setup.py
src/globalwarmingpotentials/: __init__.py  _version.py  globalwarmingpotentials.csv
src/openscm_units/data/: metric_conversions.csv
