[project]
name = "globalwarmingpotentials"
version = "0.11.1"
description = "Global warming potentials of greenhouse gases from various IPCC reports"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = 'Robert Gieseke', email = 'rob.g@web.de' }]
license = 'CC0-1.0'
keywords = [
    "climate research",
    "greenhouse gases",
    "global warming potentials",
    "climate change",
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/openclimatedata/globalwarmingpotentials"

[tool.uv_build]
source-include = ["README.md"]